--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 5rem;
   height: 100vh;
   width: 100vw;
 }
@@ -24,9 +25,12 @@ body {
   display: flex;
 }
 
-.row div {
-}
-
 .row div.hovered {
   background-color: aquamarine;
+}
+
+.options {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
